--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node .",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js --config nodemon.json"
   },
   "author": "James",
   "license": "ISC",
