--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.10.0",
     "ffmpeg": "0.0.4",
+    "googleapis": "^39.2.0",
     "nodemon": "^2.0.7",
     "opusscript": "0.0.7",
     "relevant-urban": "^2.0.0",
