--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "canvas": "^2.6.1",
     "cheerio": "^1.0.0-rc.3",
+    "colors": "^1.4.0",
     "discord-battleship": "^1.0.4",
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.10.0",
