Ó góði botti hvern eigum við að biðja í dag?

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "canvas": "^2.6.1",
     "cheerio": "^1.0.0-rc.3",
     "colors": "^1.4.0",
+    "crypto": "^1.0.1",
     "discord-battleship": "^1.0.4",
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.10.0",
