--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.10.0",
     "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.2.7",
     "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^39.2.0",
     "nodemon": "^2.0.7",
     "opusscript": "0.0.7",
     "relevant-urban": "^2.0.0",
     "request": "^2.88.2",
+    "yt-search": "^2.7.3",
     "ytdl-core": "^4.5.0"
   },
   "devDependencies": {},
