--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "canvas": "^2.6.1",
     "cheerio": "^1.0.0-rc.3",
     "colors": "^1.4.0",
+    "cross-fetch": "^3.1.4",
     "crypto": "^1.0.1",
     "discord-battleship": "^1.0.4",
     "discord.js": "^12.5.1",
