--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ffmpeg-static": "^4.2.7",
     "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^39.2.0",
+    "node-cleanup": "^2.1.2",
     "nodemon": "^2.0.7",
     "opusscript": "0.0.7",
     "relevant-urban": "^2.0.0",
