--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "relevant-urban": "^2.0.0",
     "request": "^2.88.2",
     "yt-search": "^2.10.0",
+    "ytdl-core": "^4.9.1",
     "ytdl-core-discord": "^1.3.1"
   },
   "devDependencies": {},
